Add possibility to query users by different filters.
